--- a/index.html
+++ b/index.html
@@ -8,16 +8,6 @@
 		<!-- CSS FILES -->
 		<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/uikit@latest/dist/css/uikit.min.css">
         <link rel="stylesheet" href="style.css">
-		<style>
-			.lead {
-				font-size: 1.175em;
-				font-weight: 300;
-			}
-			.uk-logo img {
-				height: 28px;
-			}
-            body {background-color: #2E123F;}
-		</style>
 	</head>
 	<body>
 
@@ -57,7 +47,7 @@
                             </div>
                         </div>
                         <div>
-                            <h1>Our Strategic Partners</h1>
+                            <h1>Strategic Partners</h1>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                         </div>
                     </div>
