--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                             <div class="uk-first-column">
                                 <div class="vertical_gradient_half_summit uk-card uk-card-body uk-flex uk-flex-center uk-flex-middle">
                                 <a href="https://live.startsummit.ch/participations/55527">
-                                    <img class="partners-logos" src="https://www.startsummit.ch/hubfs/b2match/partnersLogos/microsoft.png"
+                                    <img src="https://www.startsummit.ch/hubfs/b2match/partnersLogos/microsoft.png"
                                     alt="Microsoft" />
                                 </a>
                                 </div>
@@ -31,7 +31,7 @@
                             <div class="uk-grid-margin uk-first-column">
                                 <div class="vertical_gradient_half_summit uk-card uk-card-body uk-flex uk-flex-center uk-flex-middle">
                                 <a href="https://live.startsummit.ch/participations/55530">
-                                    <img class="partners-logos"
+                                    <img
                                     src="https://www.startsummit.ch/hubfs/b2match/partnersLogos/btov%20(new).png" alt="btov" />
                                 </a>
                                 </div>
@@ -40,7 +40,7 @@
                             <div class="uk-grid-margin uk-first-column">
                                 <div class="vertical_gradient_half_summit uk-card uk-card-body uk-flex uk-flex-center uk-flex-middle">
                                 <a href="https://live.startsummit.ch/participations/55570">
-                                    <img class="partners-logos" src="https://www.startsummit.ch/hubfs/b2match/partnersLogos/hsg.png"
+                                    <img src="https://www.startsummit.ch/hubfs/b2match/partnersLogos/hsg.png"
                                     alt="University of St.Gallen" />
                                 </a>
                                 </div>
